# CALLi

./: -files --unmerged  .gitattributes  .gitignore  .gitleaks.toml  .kics.config  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INFORME_PRUEBAS.md  LICENSE  QUALITY.md  QUALITY_IMPROVEMENTS.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  SECURITY_TEST_PLAN.md  SPELL_CHECKER_CONFIG.md  add_ssh_key_to_server.ps1  alert_rules.yml  clave_publica.txt  commit_changes.bat  components.json  cspell.json  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  docstrings_report.txt  how 03b1315  instrucciones_configuracion_ssh.md  integration_tests.py  isolated_ai_redis_tests.py  license-exceptions.json  mypy.ini  package-lock.json  package.json  prometheus.yml  pyproject.toml  (+10 more)
.github/: CONTRIBUTING.md  actions.yml  (+9 more)
backend-call-automation/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
backend-call-automation/api/: routes.py
backend-call-automation/app/: main.py
backend-call-automation/app/api/: campaigns.py
backend-call-automation/app/config/: ai_config.py  campaign_prompts.py  database.py  dependencies.py  metrics_config.py  redis_client.py  secrets.py  settings.py  supabase.py
backend-call-automation/app/dependencies/: __init__.py  service_dependencies.py
backend-call-automation/app/middleware/: __init__.py  auth_middleware.py  error_handler.py
backend-call-automation/app/models/: base.py  cache_metrics.py  call.py  call_metrics.py  campaign.py  contact.py  user.py
backend-call-automation/app/monitoring/: alert_rules.yml  custom_metrics.py  elevenlabs_metrics.py
backend-call-automation/app/routers/: audio_cache_router.py  auth_router.py  cache_router.py  call_router.py  call_webhook.py  campaign_router.py  contact_router.py  report_router.py  twilio_webhook_router.py
backend-call-automation/app/schemas/: call.py  campaign.py  client.py
backend-call-automation/app/services/: ai_conversation_service.py  alert_service.py  audio_cache_service.py  auth_service.py  cache_service.py  call_service.py  campaign_scheduler.py  campaign_service.py  contact_service.py  elevenlabs_service.py  enhanced_ai_conversation_service.py  fallback_service.py  metrics_service.py  monitoring_service.py  twilio_service.py
backend-call-automation/app/utils/: __init__.py  connection_pool.py  decorators.py  logger.py  logging.py  logging_config.py
backend-call-automation/cache/audio/: metadata.json
backend-call-automation/docs/: Makefile  ai_api_endpoints.md  cache_system.md  conf.py  directories.md  elevenlabs_integration.md  troubleshooting.md
backend-call-automation/migrations/: 00001_initial.sql  001_initial_schema.sql  20250124_create_campaigns_table.sql  20250204_create_campaign_contacts_table.sql
backend-call-automation/scripts/: rollback.py  rollback_utils.py  test_outbound_call.py  validate_env.py
backend-call-automation/tests/: README.md  conftest.py  test_basic.py  test_rollback_utils.py
(+559 files in other folders)
